# tiguclaw

./: .env.example  .gitignore  CONTRIBUTING.md  CORE.md  Cargo.toml  LICENSE  Makefile  README.ko.md  README.md  config.toml.example  install.sh  system-prompt.md  uninstall.sh
.github/workflows/: release.yml
agents/analyst/: AGENT.md  agent.toml
agents/coder/: AGENT.md  agent.toml
agents/researcher/: AGENT.md  agent.toml
agents/supermaster/: AGENT.md  agent.toml
crates/agent/: Cargo.toml
crates/agent/src/: approval.rs  cancel.rs  context_commands.rs  heartbeat.rs  lib.rs  loop_.rs  message_handler.rs  monitor.rs  prompt_builder.rs  registry.rs  scheduler.rs  skills.rs  subprocess.rs  workspace.rs
crates/agent/src/loop_/: command_runner.rs  tests.rs
crates/agent/src/tools/: agent_task.rs  auto_spawn.rs  edit_file.rs  escalate.rs  memory_search.rs  memory_store.rs  mod.rs  read_file.rs  report_to_parent.rs  send_file.rs  shell.rs  spawn_agent.rs  web_fetch.rs  web_search.rs  write_file.rs
crates/channel-telegram/: Cargo.toml
crates/channel-telegram/src/: lib.rs  telegram.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: agent_spec.rs  backup.rs  channel.rs  config.rs  error.rs  escalation.rs  event.rs  lib.rs  market.rs  provider.rs  runtime.rs  security.rs  template.rs  tool.rs  types.rs
crates/dashboard/: Cargo.toml
crates/dashboard/src/: api.rs  channel.rs  event_log.rs  lib.rs  server.rs  timeline.rs  ws.rs
crates/goal/: Cargo.toml
crates/goal/src/: lib.rs  store.rs  types.rs
crates/hooks/: Cargo.toml
crates/hooks/src/: handler.rs  lib.rs  types.rs
crates/memory/: Cargo.toml
crates/memory/src/: agent_store.rs  backend.rs  conversation.rs  embedding.rs  lib.rs  sqlite.rs  types.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: executor.rs  goal_runner.rs  lib.rs
crates/planner/: Cargo.toml
crates/planner/src/: lib.rs  planner.rs  validator.rs
crates/provider-anthropic/: Cargo.toml
crates/provider-anthropic/src/: anthropic.rs  cascade.rs  circuit_breaker.rs  lib.rs  oauth.rs  retry.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: dummy.rs  lib.rs  native.rs
dashboard/: next.config.ts  package-lock.json  package.json  server.js
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/components/: AgentCard.tsx  AgentTimelinePanel.tsx  AgentTree.tsx  AgentTreeImpl.tsx  ConversationDetail.tsx  ConversationList.tsx  LogStream.tsx  Sidebar.tsx  Timeline.tsx
dashboard/src/hooks/: useDashboard.ts
dashboard/src/types/: index.ts
personalities/: concise.md  gentle.md
shared/: CORE.md  L0.md  L1.md  L2.md  MEMORY.md.example  USER.md.example
shared/teams/: example.md
src/: defaults.rs  main.rs
src/defaults/: AGENTS.md  CORE.md  HEARTBEAT.md  T0.md  T1.md  T2.md
templates/: agent.toml.example  coder.toml  researcher.toml
