[package]
name = "tiguclaw-planner"
version = "0.1.0"
edition = "2021"

[dependencies]
tiguclaw-goal = { path = "../goal" }
tiguclaw-core = { path = "../core" }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
