[package]
name = "tiguclaw-provider-anthropic"
version = "0.1.0"
edition = "2021"

[dependencies]
tiguclaw-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
